crates/biome_cli/tests/snapshots/main_cases_assists/assist_writes.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "assists": {
    "enabled": true,
    "rules": {
      "source": {
        "useSortedKeys": "on"
      }
    }
  },
  "formatter": { "enabled": false }
}
```

## `file.json`

```json
{ "foo": "bar" ,"lorem": "ipsum","zod": true }
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
