crates/biome_cli/tests/snapshots/main_cases_assists/json_sort_keys.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{ "assists": { "enabled": true }, "formatter": { "enabled": false } }
```

## `file.json`

```json
{ "zod": true, "lorem": "ipsum", "foo": "bar" }
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.json assists ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Not all assists were applied:
  
  - {·"zod":·true,·"lorem":·"ipsum",·"foo":·"bar"·}
  + {·"foo":·"bar"·,"lorem":·"ipsum","zod":·true·}
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
